--- a/docker-compose-stack.yml
+++ b/docker-compose-stack.yml
@@ -12,9 +12,7 @@ services:
       - mongodata:/data/db:rw
       - mongoconfigdb:/data/configdb:rw
     networks:
-      - backend   
-    # ports:
-    #   - "${MONGO_PORT:-27017}:27017" #not publishing port
+      - backend
     healthcheck:
       test: ["CMD", "bash", "/mongo-healthcheck"]
       interval: 1m
@@ -38,7 +36,7 @@ services:
       OVERLAY_NETWORK_NAME: ${BACKEND_NETWORK_NAME}
       MONGO_SERVICE_NAME: ${MONGO_SERVICE_URI}
       REPLICASET_NAME: ${REPLICASET_NAME}
-      MONGO_PORT: ${MONGO_PORT:-27017}
+      MONGO_PORT: 27017
       MONGO_ROOT_USERNAME: ${MONGO_ROOT_USERNAME}
       MONGO_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
       INITDB_DATABASE: ${INITDB_DATABASE}
@@ -65,7 +63,7 @@ services:
   nosqlclient:
     image: mongoclient/mongoclient:latest
     environment:
-      - MONGOCLIENT_DEFAULT_CONNECTION_URL=mongodb://${MONGO_ROOT_USERNAME}:${MONGO_ROOT_PASSWORD}@database:${MONGO_PORT:-27017}/?replicaSet=${REPLICASET_NAME}
+      - MONGOCLIENT_DEFAULT_CONNECTION_URL=mongodb://${MONGO_ROOT_USERNAME}:${MONGO_ROOT_PASSWORD}@database:27017/?replicaSet=${REPLICASET_NAME}
     depends_on:
       - database
     ports:
