-dev/test - updated mongo version, pymongo version, python

--- a/docker-compose-stack.yml
+++ b/docker-compose-stack.yml
@@ -29,7 +29,7 @@ services:
         monitor: 15s
 
   dbcontroller:
-    image: jackietreehorn/mongo-replica-ctrl:latest
+    image: jackietreehorn/mongo-replica-ctrl:dev
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
