--- a/mongo-rs.env
+++ b/mongo-rs.env
@@ -1,6 +1,6 @@
-MONGO_VERSION=7.0.5
+MONGO_VERSION=7.0.7
 
-STACK_NAME="myapp"
+STACK_NAME="myapp-dev"
 MONGO_SERVICE_URI=${STACK_NAME}_database
 BACKEND_NETWORK_NAME=${STACK_NAME}_backend
 REPLICASET_NAME="rs"
