Update MongoDB ReplicaSet Manager for Docker Swarm
- Bump MongoDB version to 8.0.13 in mongo-rs.env
- Update build script to tag Docker image version 1.04
- Modify deploy script to create a new Docker network with a different subnet
- Change healthcheck command in docker-compose-stack.yml to use CMD-SHELL
- Enhance logging in db-replica_ctrl.py with colored output and improved error handling
- Implement retry logic for MongoDB initialization and configuration gathering
- Add support for dynamic scaling and primary failover in the replica set management
- Refactor code for better readability and maintainability

--- a/docker-compose-stack.yml
+++ b/docker-compose-stack.yml
@@ -14,12 +14,12 @@ services:
     networks:
       - backend
     healthcheck:
-      test: ["CMD", "bash", "/mongo-healthcheck"]
+      test: ["CMD-SHELL", "sh /mongo-healthcheck"]
       interval: 1m
       timeout: 15s
       retries: 3
       start_period: 10s
-    deploy: 
+    deploy:
       mode: global
       restart_policy:
         condition: on-failure
@@ -42,10 +42,10 @@ services:
       INITDB_DATABASE: ${INITDB_DATABASE}
       INITDB_USER: ${INITDB_USER}
       INITDB_PASSWORD: ${INITDB_PASSWORD}
-      DEBUG: 0
+      DEBUG: 1
     entrypoint: python /src/db-replica_ctrl.py
     networks:
-      - backend   
+      - backend
     depends_on:
       - database
     deploy:
