--- a/mongo-rs.env
+++ b/mongo-rs.env
@@ -1,4 +1,4 @@
-MONGO_VERSION=7.0.6
+MONGO_VERSION=8.0.13
 
 STACK_NAME="myapp-dev"
 MONGO_SERVICE_URI=${STACK_NAME}_database
@@ -10,3 +10,6 @@ MONGO_ROOT_PASSWORD="password123"
 INITDB_DATABASE="myinitdatabase"
 INITDB_USER="mydbuser"
 INITDB_PASSWORD="password"
+
+# NoSQLClient Web UI port (optional, defaults to 3030)
+NOSQLCLIENT_PORT=3030
