--- a/mongo-rs.env
+++ b/mongo-rs.env
@@ -1,6 +1,6 @@
 MONGO_VERSION=8.0.13
 
-STACK_NAME="myapp-dev"
+STACK_NAME="myapp-mongo-stack"
 MONGO_SERVICE_URI=${STACK_NAME}_database
 BACKEND_NETWORK_NAME=${STACK_NAME}_backend
 REPLICASET_NAME="rs"
